--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+   
+    <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
+
+<script
+  src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+  crossorigin></script>
+
+<script
+  src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+  crossorigin></script>
+
+<script>var Alert = ReactBootstrap.Alert;</script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com"> -->
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
